--- a/Cocoteca/Views/Libros/Create.cshtml
+++ b/Cocoteca/Views/Libros/Create.cshtml
@@ -42,7 +42,6 @@
                         <div class="input-group mb-3">
                             <input asp-for="Titulo" type="text" class="form-control" placeholder="Título..." aria-label="TITULO" aria-describedby="basic-addon1">
                         </div>
-
                         <div class="input-group mb-3">
                             <input asp-for="Autor" type="text" class="form-control" placeholder="Autor..." aria-label="AUTOR" aria-describedby="basic-addon1">
                         </div>
@@ -76,18 +75,18 @@
 
                         <div class="form-group">
                             <label for="numeroRevision">Revisión</label>
-                            <select class="form-control" id="numeroRevision">
+                            <select asp-for="Revision" class="form-control" id="numeroRevision">
                                 <option selected disabled value="">Seleccione una Revisión...</option>
-                                <option>1</option>
-                                <option>2</option>
-                                <option>3</option>
-                                <option>4</option>
-                                <option>5</option>
-                                <option>6</option>
-                                <option>7</option>
-                                <option>8</option>
-                                <option>9</option>
-                                <option>10</option>
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                                <option value="5">5</option>
+                                <option value="6">6</option>
+                                <option value="7">7</option>
+                                <option value="8">8</option>
+                                <option value="9">9</option>
+                                <option value="10">10</option>
                             </select>
 
                         </div>
@@ -115,31 +114,22 @@
 
                         <div class="form-group">
                             <label for="numeroRevision">Editorial</label>
-                            <select class="form-control" id="EDITORIAL">
+                            <select asp-for="Ideditorial" class="form-control" asp-items="ViewBag.Editoriales" id="EDITORIAL">
                                 <option selected disabled value="">Seleccione una Editorial...</option>
-                                <option>1</option>
-                                <option>2</option>
-                                <option>3</option>
                             </select>
                         </div>
 
                         <div class="form-group">
                             <label for="numeroRevision">País</label>
-                            <select class="form-control" id="PAIS">
+                            <select asp-for="Idpais" class="form-control" asp-items="ViewBag.Paises" id="PAIS">
                                 <option selected disabled value="">Seleccione un País...</option>
-                                <option>1</option>
-                                <option>2</option>
-                                <option>3</option>
                             </select>
                         </div>
 
                         <div class="form-group">
                             <label for="numeroRevision">Categoría</label>
-                            <select class="form-control" id="CATEGORIA">
+                            <select asp-for="Idcategoria" class="form-control" asp-items="ViewBag.Categorias" id="CATEGORIA">
                                 <option selected disabled value="">Seleccione una Categoría...</option>
-                                <option>1</option>
-                                <option>2</option>
-                                <option>3</option>
                             </select>
                         </div>
 
@@ -150,44 +140,35 @@
                         <button type="button" class="btn btn-lg btn-block btn-search" style="background-color: #EE8D11" data-toggle="modal" data-target="#altaModal">Guardar Libro y Continuar</button>
 
                     </div>
+
+
+
+                    <div class="modal fade" id="altaModal" tabindex="-1" role="dialog" aria-labelledby="altaModalLabel" aria-hidden="true" style="background-color: #e4784a">
+                        <div class="modal-dialog modal-dialog-centered" role="document">
+                            <div class="modal-content" style="background-color: #f3f3f3">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="altaModalLabel">Seguro que deseas continuar?</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                    Revisa que todos los campos ingresados sean correctos y estén escritos correctamente.
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                                    <button type="submit" value="Create" class="btn btn-search" style="background-color: #EE8D11">Guardar Cambios</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
                 </form>
             </div>
         </div>
     </div>
 
-    <div class="modal fade" id="altaModal" tabindex="-1" role="dialog" aria-labelledby="altaModalLabel" aria-hidden="true" style="background-color: #e4784a">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content" style="background-color: #f3f3f3">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="altaModalLabel">Seguro que deseas continuar?</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    Revisa que todos los campos ingresados sean correctos y estén escritos correctamente.
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-                    <button type="button" class="btn btn-search" style="background-color: #EE8D11">Guardar Cambios</button>
-                </div>
-            </div>
-        </div>
-    </div>
+
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
