--- a/Views/Compras_Libro_Vista_hu114/Compras_Libro_Vista_.cshtml
+++ b/Views/Compras_Libro_Vista_hu114/Compras_Libro_Vista_.cshtml
@@ -1,16 +1,17 @@
-﻿<!DOCTYPE html>
+﻿
+
+<!DOCTYPE html>
 
 <html>
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>La Cocoteca</title>
-    <link rel="icon" href="imagenes/coco.png" type="image/icon type">
+    <link rel="icon" href="~/imagenes/coco.png" type="image/icon type">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <link rel=StyleSheet href="css/custom.css" type="text/css" media=screen>
-    <link rel=StyleSheet href="css/lista.css" type="text/css" media=screen>
+    <link rel=StyleSheet href="~/css/custom.css" type="text/css" media=screen>
+    <link rel=StyleSheet href="~/css/libroindividual.css" type="text/css" media=screen>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
 </head>
 
@@ -18,7 +19,7 @@
 
     <nav class="navbar fixed-top navbar-expand-lg navbar-light" style="background-color: #ff9060; font-family: 'Raleway', sans-serif;">
         <a class="navbar-brand" href="#">
-            <img src="imagenes/imagotipo.png" alt="Cocoteca" width="200px" height="30px">
+            <img src="~/imagenes/imagotipo.png" alt="Cocoteca" width="200px" height="30px">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -48,14 +49,14 @@
             <li class="nav-item">
                 <div class="box-1">
                     <div class="btn btn-one">
-                        <span><img src="imagenes/usuario.png" width="30px" height="30px"> Inicia sesi&oacute;n</span>
+                        <span><img src="~/imagenes/usuario.png" width="30px" height="30px"> Inicia sesi&oacute;n</span>
                     </div>
                 </div>
             </li>
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <img class="carrito" src="imagenes/carrito.png" alt="carrito" width="30px" height="30px">
+                        <img class="carrito" src="~/imagenes/carrito.png" alt="carrito" width="30px" height="30px">
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="#">Ir al carrito</a>
@@ -86,62 +87,90 @@
                             </thead>
                             <tbody>
                                 @{
-                                    string barra = null;
+                                    string barra = "c0";
+                                    int Longitud_ = Model.Count;
 
                                 }
 
-                            <th scope="row" class="border-0">
-                                <div class="row shop-tracking-status">
-                                    <div class="col-md-12">
-                                        <div class="well">
-                                            <div class="order-status">
 
-                                                <div class="order-status-timeline">
-                                                    <!-- La barra de progreso se llena cambiando c0 por (c1,c2,c3,c4) cada numero siendo un paso completado -->
-                                                    <div class="order-status-timeline-completion @barra"></div>
-                                                </div>
+                              
 
-                                                <div class="image-order-status image-order-status-new active img-circle">
-                                                    <span class="status">Aceptado</span>
-                                                    <div class="icon"></div>
-                                                </div>
-                                                <div class="image-order-status image-order-status-active active img-circle">
-                                                    <span class="status">En progreso</span>
-                                                    <div class="icon"></div>
-                                                </div>
-                                                <div class="image-order-status image-order-status-intransit active img-circle">
-                                                    <span class="status">Enviado</span>
-                                                    <div class="icon"></div>
-                                                </div>
-                                                <div class="image-order-status image-order-status-delivered active img-circle">
-                                                    <span class="status">Entregado</span>
-                                                    <div class="icon"></div>
-                                                </div>
-                                                <div class="image-order-status image-order-status-completed active img-circle">
-                                                    <span class="status">Completado</span>
-                                                    <div class="icon"></div>
-                                                </div>
 
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+<th scope="row" class="border-0">
+    <div class="row shop-tracking-status">
+        @for (int i = 0; i < @Longitud_ / 19; i++)
+        {
+            @for (int j = i + (i * 18); j <= i + (i * 18); j++)
+            {
+                @foreach (var Libroslista in ((IEnumerable<string>)Model).ElementAt(j + 17))
+
+                {
+                    if (Libroslista == 'E' )
+                    {
+                        barra = "c2";
+                    }
+                  
+                    if (Libroslista == 'P')
+                    {
+                        barra = "c1";
+                    }
+                    if (Libroslista == 'R')
+                    {
+                        barra = "c4";
+                    }
+                }
+            }
+        }
+        <div class="col-md-12">
+            <div class="well">
+                <div class="order-status">
+                    <div class="order-status-timeline">
+                        <!-- La barra de progreso se llena cambiando c0 por (c1,c2,c3,c4) cada numero siendo un paso completado -->
+                        <div class="order-status-timeline-completion @barra"></div>
+                    </div>
+
+                    <div class="image-order-status image-order-status-new active img-circle">
+                        <span class="status">Aceptado</span>
+                        <div class="icon"></div>
+                    </div>
+                    <div class="image-order-status image-order-status-active active img-circle">
+                        <span class="status">En progreso</span>
+                        <div class="icon"></div>
+                    </div>
+                    <div class="image-order-status image-order-status-intransit active img-circle">
+                        <span class="status">Enviado</span>
+                        <div class="icon"></div>
+                    </div>
+                    <div class="image-order-status image-order-status-delivered active img-circle">
+                        <span class="status">Realizado</span>
+                        <div class="icon"></div>
+                    </div>
+                    <div class="image-order-status image-order-status-completed active img-circle">
+                        <span class="status">Completado</span>
+                        <div class="icon"></div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
                                 <br>
                                 @{ int Longitud = Model.Count;
                                 }
 
-                                @for (int i = 0; i < @Longitud / 13; i++)
+                                @for (int i = 0; i < @Longitud / 19; i++)
                                 {
                                     <ul class="list-group">
                                         <li class="list-group-item">
                                             <div class="p-2">
                                                 <div class="d-inline-block">
                                                     <img src=
-                                                          @for (int j = i + (i * 13); j <= i + (i * 13); j++)
+                                                          @for (int j = i + (i * 18); j <= i + (i * 18); j++)
                                                             {
                                                                 @foreach (var Libroslista in ((IEnumerable<string>)Model).ElementAt(j + 9))
                                                                 {
                                                                     @Libroslista
+                                                                 
                                                                 }
                                                             }
                                                          height="180px" width="120px">
@@ -149,7 +178,7 @@
                                                 <div class="ml-3 d-inline-block align-top">
                                                     <div class="d-inline-block">
                                                         <h2>
-                                                            @for (int j = i + (i * 13); j <= i + (i * 13); j++)
+                                                            @for (int j = i + (i * 18); j <= i + (i * 18); j++)
                                                             {
                                                                 @foreach (var Libroslista in ((IEnumerable<string>)Model).ElementAt(j + 1))
                                                                 {
@@ -159,7 +188,7 @@
                                                         </h2>
                                                         <h5>
                                                             <footer class="blockquote-footer">
-                                                                @for (int j = i + (i * 13); j <= i + (i * 13); j++)
+                                                                @for (int j = i + (i * 18); j <= i + (i * 18); j++)
                                                                 {
                                                                     @foreach (var Libroslista in ((IEnumerable<string>)Model).ElementAt(j + 2))
                                                                     {
@@ -170,7 +199,7 @@
                                                         </h5><br>
                                                         <p>
                                                             <font>
-                                                                <u> <b>ISBN:</b></u> @for (int j = i + (i * 13); j <= i + (i * 13); j++)
+                                                                <u> <b>ISBN:</b></u> @for (int j = i + (i * 18); j <= i + (i * 18); j++)
                                                                 {
                                                                     @foreach (var Libroslista in ((IEnumerable<string>)Model).ElementAt(j + 0))
                                                                     {
@@ -181,7 +210,7 @@
                                                         </p>
                                                         <p>
                                                             <font>
-                                                                <u> <b>Editorial:</b></u> @for (int j = i + (i * 13); j <= i + (i * 13); j++)
+                                                                <u> <b>Editorial:</b></u> @for (int j = i + (i * 18); j <= i + (i * 18); j++)
                                                                 {
                                                                     @foreach (var Libroslista in ((IEnumerable<string>)Model).ElementAt(j + 11))
                                                                     {
@@ -192,7 +221,7 @@
                                                         </p>
                                                         <p>
                                                             <font>
-                                                                <u> <b>Genero:</b></u> @for (int j = i + (i * 13); j <= i + (i * 13); j++)
+                                                                <u> <b>Genero:</b></u> @for (int j = i + (i * 18); j <= i + (i * 18); j++)
                                                                 {
                                                                     @foreach (var Libroslista in ((IEnumerable<string>)Model).ElementAt(j + 12))
                                                                     {
@@ -203,7 +232,7 @@
                                                         </p>
                                                         <p>
                                                             <font>
-                                                                <u> <b>Paginas:</b></u> @for (int j = i + (i * 13); j <= i + (i * 13); j++)
+                                                                <u> <b>Paginas:</b></u> @for (int j = i + (i * 18); j <= i + (i * 18); j++)
                                                                 {
                                                                     @foreach (var Libroslista in ((IEnumerable<string>)Model).ElementAt(j + 4))
                                                                     {
@@ -214,7 +243,7 @@
                                                         </p>
                                                         <p>
                                                             <font>
-                                                                <u> <b>Año de Impresion:</b></u> @for (int j = i + (i * 13); j <= i + (i * 13); j++)
+                                                                <u> <b>Año de Impresion:</b></u> @for (int j = i + (i * 18); j <= i + (i * 18); j++)
                                                                 {
                                                                     @foreach (var Libroslista in ((IEnumerable<string>)Model).ElementAt(j + 5))
                                                                     {
@@ -225,7 +254,7 @@
                                                         </p>
                                                         <p>
                                                             <font>
-                                                                <u> <b>Pais:</b></u> @for (int j = i + (i * 13); j <= i + (i * 13); j++)
+                                                                <u> <b>Pais:</b></u> @for (int j = i + (i * 18); j <= i + (i * 18); j++)
                                                                 {
                                                                     @foreach (var Libroslista in ((IEnumerable<string>)Model).ElementAt(j + 13))
                                                                     {
@@ -253,7 +282,7 @@
                                                                 <p class="font-italic text-muted mb-0 medium">
                                                                 </p>
                                                                 <p class="font-italic text-muted mb-0 medium">
-                                                                    Cantidad: @for (int j = i + (i * 13); j <= i + (i * 13); j++)
+                                                                    Cantidad: @for (int j = i + (i * 18); j <= i + (i * 18); j++)
                                                                     {
                                                                         @foreach (var Libroslista in ((IEnumerable<string>)Model).ElementAt(j + 10))
                                                                         {
@@ -262,7 +291,7 @@
                                                                     }
                                                                 </p>
                                                                 <p class="font-italic text-muted mb-0 medium">
-                                                                    Costo Individual: @for (int j = i + (i * 13); j <= i + (i * 13); j++)
+                                                                    Costo Individual: @for (int j = i + (i * 18); j <= i + (i * 18); j++)
                                                                     {
                                                                         @foreach (var Libroslista in ((IEnumerable<string>)Model).ElementAt(j + 7))
                                                                         {
