--- a/Cocoteca/Views/ClienteInicio/Index.cshtml
+++ b/Cocoteca/Views/ClienteInicio/Index.cshtml
@@ -59,6 +59,7 @@
                                             <h5 class="card-text">@cat.mtoCatLibros[i].autor</h5>
                                             <h5 class="card-text">Precio: </h5>
                                             <h5 class="card-text">$ @cat.mtoCatLibros[i].precio cocoins</h5>
+                                            <h5 class="card-text">ID: @cat.mtoCatLibros[i].idlibro</h5>
                                             <a class="btn btn-comprar" href="#">Comprar</a>
                                             <a class="btn btn-comprar" href="#">Añadir al carrito</a>
                                         </div>
@@ -83,6 +84,7 @@
                                             <h5 class="card-text">@cat.mtoCatLibros[i].autor</h5>
                                             <h5 class="card-text">Precio: </h5>
                                             <h5 class="card-text">$ @cat.mtoCatLibros[i].precio cocoins </h5>
+                                            <h5 class="card-text">ID: @cat.mtoCatLibros[i].idlibro</h5>
                                             <a class="btn btn-comprar" href="#">Comprar</a>
                                             <a class="btn btn-comprar" href="#">Añadir al carrito</a>
                                         </div>
