--- a/Cocoteca/Views/ClienteInicio/GridLibros.cshtml
+++ b/Cocoteca/Views/ClienteInicio/GridLibros.cshtml
@@ -25,10 +25,11 @@
                                     <h5 class="card-text"> @libro.autor</h5>
                                     <h5 class="card-text"> Precio: </h5>
                                     <h5 class="card-text"> @libro.precio cocoins</h5>
+                                    <h5 class="card-text">ID: @libro.idlibro</h5>
                                     <div class="d-flex justify-content-between align-items-center">
                                         <div class="btn-group">
                                             <button class="btn btn-sm btn-outline-secondary" style="background-color:#F2BF2C">Ver Libro</button>
-                                            <button class="btn btn-sm btn-outline-secondary" style="background-color:#FCA12D">Agregar a Carrito</button>
+                                            <button class="btn btn-sm btn-outline-secondary" style="background-color:#FCA12D"><a asp-controller="ClienteInicio"  asp-action="GenerarCarritoAsync" asp-route-id="@libro.idlibro">Agregar a Carrito</a></button>
                                         </div>
                                     </div>
                                 </div>
