--- a/Cocoteca/Views/ClienteInicio/GridLibros.cshtml
+++ b/Cocoteca/Views/ClienteInicio/GridLibros.cshtml
@@ -28,7 +28,7 @@
                                     <div class="d-flex justify-content-between align-items-center">
                                         <div class="btn-group">
                                             <button class="btn btn-sm btn-outline-secondary" style="background-color:#F2BF2C">Ver Libro</button>
-                                            <button class="btn btn-sm btn-outline-secondary" style="background-color:#FCA12D">Agregar a Carrito</button>
+                                            <button class="btn btn-sm btn-outline-secondary" style="background-color:#FCA12D"><a asp-controller="ClienteInicio"  asp-action="GenerarCarrito" asp-route-id="@libro.idlibro">Agregar a Carrito</a></button>
                                         </div>
                                     </div>
                                 </div>
