--- a/Cocoteca/Views/DatosUsuario/Details.cshtml
+++ b/Cocoteca/Views/DatosUsuario/Details.cshtml
@@ -28,9 +28,16 @@
         <dt class="col-sm-2">
             <p>Direccion</p>@*@Html.DisplayNameFor(model => model.apellido)*@
         </dt>
+
+        @foreach (var item in ViewBag.Users.catDirecciones)
+        {
         <dd class="col-sm-10">
-            <p>@ViewBag.Users.catDirecciones</p>@*@Html.DisplayFor(model => model.apellido)*@
+            <p>@item</p>
         </dd>
+        }
+        @*<dd class="col-sm-10">
+            <p>@ViewBag.Users.catDirecciones</p>@Html.DisplayFor(model => model.apellido)
+        </dd>*@
     </dl>
 </div>
 <div>
