--- a/Cocoteca/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/Cocoteca/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model PersonalDataModel
 @{
-    ViewData["Title"] = "Personal Data";
+    ViewData["Title"] = "Datos personales";
     ViewData["ActivePage"] = ManageNavPages.PersonalData;
 }
 
@@ -9,16 +9,34 @@
 
 <div class="row">
     <div class="col-md-6">
-        <p>Your account contains personal data that you have given us. This page allows you to download or delete that data.</p>
-        <p>
-            <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
-        </p>
-        <form id="download-data" asp-page="DownloadPersonalData" method="post" class="form-group">
-            <button class="btn btn-primary" type="submit">Download</button>
+        @if (User.IsInRole("Cliente"))
+        {
+            <p>Tu cuenta contiene datos personales que nos has dado. Esta página te permite editar o eliminar esos datos.</p>
+        }
+        <form id="personalData-form" method="post">
+            <div asp-validation-summary="All" class="text-danger"></div>
+            <input asp-for="Input.IdUsuario" type="hidden" />
+            <div class="form-group">
+                <label asp-for="Input.Nombre"></label>
+                <input asp-for="Input.Nombre" class="form-control" />
+                <span asp-validation-for="Input.Nombre" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.Apellido"></label>
+                <input asp-for="Input.Apellido" class="form-control" />
+                <span asp-validation-for="Input.Apellido" class="text-danger"></span>
+            </div>
+            <button type="submit" class="btn btn-primary">Actualizar datos</button>
         </form>
-        <p>
-            <a id="delete" asp-page="DeletePersonalData" class="btn btn-primary">Delete</a>
-        </p>
+        @if (User.IsInRole("Cliente"))
+        {
+            <p>
+                <a id="delete" asp-page="DeletePersonalData" class="btn btn-primary">Borrar</a>
+            </p>
+            <p>
+                <strong>Borrar estos datos eliminará permanentemente tu cuenta, y eso no puede ser recuperado.</strong>
+            </p>
+        }
     </div>
 </div>
 
