Adaptación del diseño Lista de Usuarios Admin

--- a/Cocoteca/Areas/Identity/Pages/Account/RegisterFromAdmin.cshtml
+++ b/Cocoteca/Areas/Identity/Pages/Account/RegisterFromAdmin.cshtml
@@ -44,7 +44,7 @@
                 </select>
                 <span asp-validation-for="UsuarioSeleccionado" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-primary">Registrarse</button>
+            <button type="submit" class="btn btn-comprar">Registrar</button>
         </form>
     </div>
 </div>
