--- a/Cocoteca/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Cocoteca/Areas/Identity/Pages/Account/Login.cshtml
@@ -32,7 +32,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-primary">Iniciar sesión</button>
+                    <button type="submit" class="btn btn-search">Iniciar sesión</button>
                 </div>
                 <div class="form-group">
                     <p>
