--- a/Cocoteca/Views/Shared/_Layout.cshtml
+++ b/Cocoteca/Views/Shared/_Layout.cshtml
@@ -32,6 +32,14 @@
                             <a class="nav-link" asp-area="" asp-controller="ClienteInicio" asp-action="Index">Inicio<span class="sr-only">(current)</span></a>
                         </li>
                         @await Component.InvokeAsync("Categorias")
+
+                        @if (User.IsInRole("Admin") || User.IsInRole("Super Admin"))
+                        {
+                            <li class="nav-item" style="padding-left: 0px; padding-right: 0px;">
+                                <a class="nav-link" asp-controller="Admin" asp-action="ListaUsuarios">Lista de Usuarios<span class="sr-only">(current)</span></a>
+                            </li>
+
+                        }
                     </ul>
 
                     <form class="form-inline my-1 my-lg-1">
