--- a/Cocoteca/Views/Shared/_LoginPartial.cshtml
+++ b/Cocoteca/Views/Shared/_LoginPartial.cshtml
@@ -10,31 +10,33 @@
         </li>
         <li class="nav-item" style="padding-left: 0px; padding-right: 0px;">
             <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "ClienteInicio", new { area = "" })" method="post">
-                <button type="submit" class="nav-link btn btn-link text-dark" style="padding-left: 0px; padding-right: 0px;">Logout</button>
+                <button type="submit" class="nav-link btn btn-dark"> Logout </button>
+
             </form>
         </li>
 
     </ul>
     <li class="nav-item"><a class="btn btn-light btn-circle" style="margin: 0px 10px 0px 10px;"><img class="carrito" src="~/carrito.png" alt="carrito" style="width:30px; height:30px"> </a></li>
-}
+    
+ }
 else
 {
-    <ul class="navbar-nav">
-        <li class="nav-item" >
-            <a class="nav-link" asp-area="Identity" asp-page="/Account/Register">Registrate</a>
-        </li>
-    </ul>
+<ul class="navbar-nav">
     <li class="nav-item">
-        <a asp-area="Identity" asp-page="/Account/Login">
-            <div class="box-1">
-                <div class="btn btn-one" >
-                    <span><img src="~/usuario.png" style="width:30px; height:30px">Inicia sesi&oacute;n</span>
-                </div>
-            </div>
-        </a>
+        <a class="btn btn-comprar" asp-area="Identity" asp-page="/Account/Register">Registrate</a>
     </li>
-    @*<li class="nav-item">
-            <a class="nav-link" asp-area="Identity" asp-page="/Account/Login">Login</a>
-        </li>*@
+</ul>
+<li class="nav-item">
+    <a asp-area="Identity" asp-page="/Account/Login">
+        <div class="box-1">
+            <div class="btn btn-one">
+                <span><img src="~/usuario.png" style="width:30px; height:30px">Inicia sesi&oacute;n</span>
+            </div>
+        </div>
+    </a>
+</li>
+@*<li class="nav-item">
+        <a class="nav-link" asp-area="Identity" asp-page="/Account/Login">Login</a>
+    </li>*@
 }
 
