--- a/Cocoteca/Views/ClienteInicio/GridLibros.cshtml
+++ b/Cocoteca/Views/ClienteInicio/GridLibros.cshtml
@@ -27,7 +27,7 @@
                                     <h5 class="card-text"> @libro.precio cocoins</h5>
                                     <div class="d-flex justify-content-between align-items-center">
                                         <div class="btn-group">
-                                            <button class="btn btn-sm btn-outline-secondary" style="background-color:#F2BF2C">Ver Libro</button>
+                                            <a class="btn btn-comprar" asp-controller="Equipo_Tripas" asp-action="Libro_Vista" asp-route-id="@libro.idlibro"  >Ver Libro</a>
                                             <button class="btn btn-sm btn-outline-secondary" style="background-color:#FCA12D">Agregar a Carrito</button>
                                         </div>
                                     </div>
