--- a/Cocoteca/Views/EditarLibro/EditarLibro.cshtml
+++ b/Cocoteca/Views/EditarLibro/EditarLibro.cshtml
@@ -36,19 +36,20 @@
                             <label for="exampleFormControlSelect1">ISBN:</label>
                         </div>
                         <div class="input-group mb-3 ">
-                            <input type="text" class="form-control" placeholder="ISBN del libro ->Aqui<-" aria-label="ISBN" aria-describedby="basic-addon1">
-                        </div>
-                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="@ViewBag.Libro.Isbn" aria-label="ISBN" aria-describedby="basic-addon1">
+</div>
+
+<div class="input-group">
                             <label for="exampleFormControlSelect1">Titulo:</label>
                         </div>
                         <div class="input-group mb-3">
-                            <input type="text" class="form-control" placeholder="Título del libro ->Aqui<-" aria-label="TITULO" aria-describedby="basic-addon1">
+                            <input type="text" class="form-control" placeholder="@ViewBag.Libro.Titulo" aria-label="TITULO" aria-describedby="basic-addon1">
                         </div>
                         <div class="input-group">
                             <label for="exampleFormControlSelect1">Autor:</label>
                         </div>
                         <div class="input-group mb-3">
-                            <input type="text" class="form-control" placeholder="Autor ->Aqui<-" aria-label="AUTOR" aria-describedby="basic-addon1">
+                            <input type="text" class="form-control" placeholder="@ViewBag.Libro.Autor" aria-label="AUTOR" aria-describedby="basic-addon1">
                         </div>
 
                         <div class="input-group mb-3">
@@ -77,7 +78,7 @@
                             <label for="exampleFormControlSelect1">No. Paginas:</label>
                         </div>
                         <div class="input-group mb-3">
-                            <input type="text" class="form-control" placeholder="Número de Páginas ->Aqui<-" aria-label="PAGINAS" aria-describedby="basic-addon1">
+                            <input type="text" class="form-control" placeholder="@ViewBag.Libro.Paginas" aria-label="PAGINAS" aria-describedby="basic-addon1">
                         </div>
 
 
@@ -102,7 +103,7 @@
                             <label for="exampleFormControlSelect1">Año de publicacion:</label>
                         </div>
                         <div class="input-group mb-3">
-                            <input type="text" class="form-control" placeholder="Año ->Aqui<-" aria-label="ANO" aria-describedby="basic-addon1">
+                            <input type="text" class="form-control" placeholder="@ViewBag.Libro.Ano" aria-label="ANO" aria-describedby="basic-addon1">
                         </div>
 
 
@@ -121,7 +122,7 @@
                             <label for="exampleFormControlSelect1">Cantidad en Stock:</label>
                         </div>
                         <div class="input-group mb-3">
-                            <input type="text" class="form-control" placeholder="Cantidad en Stock ->Aqui<-" aria-label="STOCK" aria-describedby="basic-addon1">
+                            <input type="text" class="form-control" placeholder="@ViewBag.Libro.Stock" aria-label="STOCK" aria-describedby="basic-addon1">
                         </div>
 
                         <div class="form-group">
@@ -157,7 +158,7 @@
                             <label for="exampleFormControlSelect1">Link de la imagen:</label>
                         </div>
                         <div class="input-group mb-3">
-                            <input type="text" class="form-control" placeholder="Link de Imagen ->Aqui<-" aria-label="IMAGEN" aria-describedby="basic-addon1">
+                            <input type="text" class="form-control" placeholder="@ViewBag.Libro.Imagen" aria-label="IMAGEN" aria-describedby="basic-addon1">
                         </div>
 
                         <button type="button" class="btn btn-lg btn-block btn-search" style="background-color: #EE8D11" data-toggle="modal" data-target="#altaModal">Actualizar la informacion</button>
